# UrduMMLU

./: .env.template  .gitignore  README.md  config.yaml  dashboard.html  eval.sh  pakmcqs.py  preview.html  pyproject.toml  requirements.txt  review_json_structure.py
.github/workflows/: hf-push.yml
clean_data/: COMBINED_ANALYSIS.md  mcqs_with_answers_README.md  mcqs_without_answers_README.md
data/: ahmer_mcqs.json  analysis.ipynb  domain.ipynb  domain_with_answers.ipynb  level_subdomain.ipynb  mcqs_with_answers_README.md  mcqtimes.ipynb  mcqtimes_urdu.json  merge.ipynb  merge_with_answers.ipynb  native_mcqs.ipynb  pakmcqs.ipynb  report.md  stem.ipynb  ustad_360.ipynb
data/!-final/: alignemnt_test.ipynb  spot_check.ipynb
data/1-raw/: mcqtimes.json  pakmcqs_urdu_general_knowledge.json  stem.json  upsample_mcqs.json
data/10-structural-cleaned/: mcqs_upsampled.json
data/11-punctuation-normalized/: mcqs_upsampled.json
data/12-blanks-normalized/: mcqs_upsampled.json
data/14-english-filtered/: dropped.json
data/15-english-filtered/: mcqs_upsampled.json
data/17-assignments/: assignments.json
data/18-assignments/: assignments.json
data/2-processed/: mcqtimes.json  pakmcqs.json  stem.json  upsample_mcqs.json
data/21-final-annotated/: rules.md  stats.json
data/22-final-combined/: stats.json
data/23-anonymize/: mapping.json
data/24-deduplicated/: stats.json
docs/: index.html  leaderboard.html
ocr/: classify.py  merge_questions.py  ocr.py  pdf_to_images.py  pipeline.py
output/: classifications.json  detailed_accuracy.csv  length_tier_accuracy.csv  questions_claude-opus-4-6.json  questions_claude-sonnet-4-6.json  questions_gemini-3-flash-preview.json  questions_gpt-4o.json  questions_gpt-5.4.json  subdomain_accuracy.csv
scripts/: build_site.py  deploy.py  prep_lm_eval.py
src/: mcqtimes.py  run_experiment.py  run_experiment_ministral.py
tasks/: urdu_mmlu.yaml
web/: index.html
(+1790 files in other folders)
