[project]
name = "urdu-mmlu"
version = "0.1.0"
description = "Urdu MMLU benchmark"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "annotated-types==0.7.0",
    "anthropic==0.92.0",
    "anyio==4.13.0",
    "beautifulsoup4==4.14.3",
    "bs4==0.0.2",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "cryptography==46.0.7",
    "distro==1.9.0",
    "docstring_parser==0.17.0",
    "exceptiongroup==1.3.1",
    "google-api-core==2.30.2",
    "google-api-python-client==2.194.0",
    "google-auth==2.49.1",
    "google-auth-httplib2==0.3.1",
    "google-genai==1.73.1",
    "googleapis-common-protos==1.74.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.13.0",
    "pillow==12.2.0",
    "playwright==1.58.0",
    "proto-plus==1.27.2",
    "protobuf==7.34.1",
    "pyasn1==0.6.3",
    "pyasn1_modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "pyee==13.0.1",
    "PyMuPDF==1.27.2.2",
    "pyparsing==3.3.2",
    "python-dotenv==1.2.2",
    "pyyaml>=6.0.3",
    "requests==2.33.0",
    "sniffio==1.3.1",
    "soupsieve==2.8.3",
    "tenacity==9.1.4",
    "torch>=2.6.0",
    "transformers>=5.9.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "websockets==16.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
